--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			        <configuration>
+                			<mainClass>com.lapots.breed.hero.journey.web.HeroJourneyWebApplication</mainClass>
+            			</configuration>
 			</plugin>
 		</plugins>
 		<directory>build</directory>
